Sorted margin issue. Added additional css for padding and sizing. changed text colour. Changed welcome text to mui component and made it responsive.

--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,12 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(118,130,95) ;
-
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: rgb(224, 222, 214);
+  background-color: rgb(118,130,95);
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  max-height: 100vh;
 }
 
