--- a/src/style/welcomeStyle.css
+++ b/src/style/welcomeStyle.css
@@ -1,3 +1,12 @@
 .welcome{
-   text-align: center;
+   padding-top: 1rem;
+   padding-left: 2rem;
+   padding-right: 2rem;
+
 }
+
+@media (max-width: 600px) {
+   h1 {
+     font-size: 1.5rem;
+   }
+ }
