--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,35 @@
   line-height: 1.5;
   font-weight: 400;
 
+  height: 100%;
+  width: 100%;
+
   color: rgb(224, 222, 214);
   background-color: rgb(118,130,95);
 }
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.page{
+  margin: 1rem;
+  width: inherit;
+  height: inherit;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+}
+.text{
+  padding-top: 1rem;
+  padding-right: 2rem;
+}
+.text-align{
+  text-align: center;
+}
