--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,49 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  height: 100%;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
 
   color: rgb(224, 222, 214);
   background-color: rgb(118,130,95);
 }
 
 html, body, #root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: hidden; 
 }
 
-.page{
-  margin: 1rem;
-  width: inherit;
-  height: inherit;
+.page {
+  padding: 0.5rem;  
+  width: 100%;
+  height: 100%;
 }
 
-.container{
+.grid-container {
+  width: 100%;
+  height: 100%;
+}
+
+.grid {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
-.text{
+
+.text {
   padding-top: 1rem;
   padding-right: 2rem;
 }
-.text-align{
+
+.text-align {
   text-align: center;
 }
