--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ html, body, #root {
 }
 
 .page {
-  padding: 0.5rem;  
+  padding: 2rem;  
   width: 100%;
   height: 100%;
 }
@@ -39,6 +39,9 @@ html, body, #root {
   align-items: center;
 }
 
+.padding-4{
+  padding: 4rem;
+}
 .text {
   padding-top: 1rem;
   padding-right: 2rem;
@@ -46,4 +49,8 @@ html, body, #root {
 
 .text-align {
   text-align: center;
+}
+
+.text-size{
+  font-size: large;
 }
